Fix font is too light

--- a/less/ntsd-blog.less
+++ b/less/ntsd-blog.less
@@ -65,9 +65,12 @@ header.intro-header .intro-header-inner {
 .side-catalog.fixed {
   top: 100px;
 }
+.post-preview>a {
+    color: #000;
+}
 .post-content-preview {
-    color: #737373;
+    color: #767676;
 }
 .post-preview>.post-meta {
-    color: #999;
+    color: #696969;
 }
